--- a/pom.xml
+++ b/pom.xml
@@ -21,4 +21,23 @@
       <scope>compile</scope>
 	</dependency>
   </dependencies>
+
+<plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <version>2.10</version>
+        <executions>
+          <execution>
+            <id>copy-dependencies</id>
+            <phase>package</phase>
+            <goals>
+              <goal>copy-dependencies</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>${project.build.directory}/dependencies</outputDirectory>
+              <includeScope> runtime </includeScope> 
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
 </project>
