--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,9 @@
 	</dependency>
   </dependencies>
 
-<plugin>
+  <build>
+   	<plugins>
+      		<plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
         <version>2.10</version>
@@ -40,4 +42,6 @@
           </execution>
         </executions>
       </plugin>
+    </plugins>
+  <build>
 </project>
