--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,25 @@
 			  </archive>
 			</configuration>
 		</plugin>
+
+<plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <version>2.10</version>
+        <executions>
+          <execution>
+            <id>copy-dependencies</id>
+            <phase>package</phase>
+            <goals>
+              <goal>copy-dependencies</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>${project.build.directory}/dependencies</outputDirectory>
+              <includeScope> runtime </includeScope> 
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
 	</plugins>
   </build>
 </project>
