--- a/pom.xml
+++ b/pom.xml
@@ -14,50 +14,61 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
-	<dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <version>1.2.17</version>
-      <scope>compile</scope>
-	</dependency>
+    <dependency>
+     <groupId>log4j</groupId>
+     <artifactId>log4j</artifactId>
+     <version>1.2.17</version>
+     <scope>compile</scope>
+    </dependency>
   </dependencies>
-
   <build>
 	<plugins>
-  		<!-- Make this jar executable -->
+	 <!-- Make this jar executable -->
 		<plugin>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-jar-plugin</artifactId>
-			<version>2.6</version>
-			<configuration>
-<!--Pluging configuration -->
-			 <archive>
-				<manifest>
-					<!-- Jar file entry point -->
-					<mainClass>${project.groupId}.MisMatematicas</mainClass>
-				</manifest>
-			  </archive>
-			</configuration>
+     		   <groupId>org.apache.maven.plugins</groupId>
+     		   <artifactId>maven-dependency-plugin</artifactId>
+     		   <version>2.10</version>
+     		   <executions>
+     		     <execution>
+        		    <id>copy-dependencies</id>
+         		   <phase>package</phase>
+           		 <goals>
+            		  <goal>copy-dependencies</goal>
+          		  </goals>
+           		 <configuration>
+           		   <outputDirectory>${project.build.directory}/dependencies</outputDirectory>
+           		   <includeScope> runtime </includeScope> 
+           		 </configuration>
+         		 </execution>
+       		 </executions>
+    		  </plugin>
+		<plugin>
+		  <groupId>org.apache.maven.plugins</groupId>
+		  <artifactId>maven-jar-plugin</artifactId>
+	          <version>2.6</version>
+		  <configuration>
+	<!--Pluging configuration -->
+		  <archive>
+		  <manifest>
+		  <!-- Jar file entry point -->
+			<mainClass>${project.groupId}.MisMatematicas</mainClass>
+			<addClasspath>true</addClasspath>
+			<classpathPrefix>dependencies/</classpathPrefix>
+		  </manifest>
+		  </archive>
+		  </configuration>
 		</plugin>
-
-<plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-dependency-plugin</artifactId>
-        <version>2.10</version>
-        <executions>
-          <execution>
-            <id>copy-dependencies</id>
-            <phase>package</phase>
-            <goals>
-              <goal>copy-dependencies</goal>
-            </goals>
-            <configuration>
-              <outputDirectory>${project.build.directory}/dependencies</outputDirectory>
-              <includeScope> runtime </includeScope> 
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-	</plugins>
+		
+	  </plugins>
   </build>
+	<distributionManagement>
+    	<repository>
+      	<id> idRepo</id>
+      	<name> Prueba</name>
+      	<url> file:C:/Users/josecarlos/Desktop/egc_examen/proy1</url>
+    </repository>
+	</distributionManagement>
+
 </project>
+
+
