--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>es.egc.app</groupId>
+  <groupId>es.egc</groupId>
   <artifactId>mydni</artifactId>
   <packaging>jar</packaging>
   <version>0.2.0</version>
-  <name>proy1</name>
+  <name>egc-prueba1</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
@@ -61,14 +61,6 @@
 		
 	  </plugins>
   </build>
-	<distributionManagement>
-    	<repository>
-      	<id> idRepo</id>
-      	<name> Prueba</name>
-      	<url> file:C:/Users/josecarlos/Desktop/egc_examen/proy1</url>
-    </repository>
-	</distributionManagement>
-
 </project>
 
 
